--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.5",
+    "@mui/material": "^5.14.8",
+    "@mui/x-data-grid": "^6.13.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@supabase/supabase-js": "^2.33.1",
+    "apexcharts": "^3.42.0",
     "framer-motion": "^10.16.2",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.7",
     "swiper": "^10.2.0"
   },
